Bug #35, SVG map too small on hypothesis pages - CSS min-height [LACE]

--- a/css/style.css
+++ b/css/style.css
@@ -1605,3 +1605,9 @@ speak: none;
 	color: #530;  /* #522 */
 	padding: 5px;
 }
+
+/* Hypothesis map [Bug: #35] */
+#country-vis-map > div, #country-vis-map svg {
+       min-height: 140px;
+       max-height: 320px;
+}
